kustomize/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: path-prefix
spec:
  stripPrefix:
    prefixes:
      - "/app"
    forceSlash: false
