kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: demo-app
