kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.middlewares: default-path-prefix@kubernetescrd
spec:
  rules:
    - host: ukp-square.demo.com
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: demo-app
                port:
                  number: 80
